simplify frontend add login site with Controller and View

--- a/ASP .NET Core Client/eClinic/Views/Shared/_Layout.cshtml
+++ b/ASP .NET Core Client/eClinic/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-
+    <br />
     <!--================Header Menu Area =================-->
     <header class="header_area">
         <div class="main_menu">
@@ -29,6 +29,7 @@
                 <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <a class="navbar-brand logo_h" href="index.html"><img src="~/img/logo.png" alt=""></a>
+
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="icon-bar"></span>
@@ -43,7 +44,7 @@
                             <li class="nav-item"><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
-                            <li class="nav-item"><a href="#" class="primary_btn text-uppercase">free trial</a></li>
+                            <li class="nav-item"><a class="primary_btn text-uppercase" asp-area="" asp-controller="Login" asp-action="Index">sign up / sign in</a></li>
                         </ul>
                     </div>
                 </div>
@@ -51,7 +52,7 @@
         </div>
     </header>
     <!--================Header Menu Area =================-->
-
+    <br />
     <div class="container body-content">
         @RenderBody()
         <hr />
