login page improved

--- a/ASP .NET Core Client/eClinic/Views/Home/HomeView.cshtml
+++ b/ASP .NET Core Client/eClinic/Views/Home/HomeView.cshtml
@@ -3,5 +3,7 @@
 }
 
 <h2>HomeView</h2>
-This is my simple View!!!
+<div class="home-img-container">
+    <img src="http://www.waterdownwalkinclinic.com/wp-content/uploads/2014/07/pic_1.png" class="home-img-picture" alt="Doctors" />
+</div>
 
