quick bugfix for /Views/Login/Index.cshtml page

--- a/ASP .NET Core Client/eClinic/Views/Login/Index.cshtml
+++ b/ASP .NET Core Client/eClinic/Views/Login/Index.cshtml
@@ -58,5 +58,5 @@
             </div>
         </div>
     </div>
-    <script src="~/js/index.js"></scr
+    <script src="~/js/index.js"> </script>
  </form>
