--- a/ASP .NET Core Client/eClinic/Views/Shared/_DoctorLayout.cshtml
+++ b/ASP .NET Core Client/eClinic/Views/Shared/_DoctorLayout.cshtml
@@ -28,7 +28,7 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
-                    <a class="navbar-brand logo_h" ><img src="~/img/logo.png" alt=""></a>
+                    <a class="navbar-brand logo_h"><img src="~/img/logo.png" alt=""></a>
 
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,12 +39,12 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                         <ul class="nav navbar-nav menu_nav justify-content-center">
-                            <li class="nav-item"><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                            <li class="nav-item"><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                            <li class="nav-item"><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                            <li class="nav-item"><a asp-area="" asp-controller="Home" asp-action="Index">Todays Visits</a></li>
+                            <li class="nav-item"><a asp-area="" asp-controller="Home" asp-action="About">Calendar</a></li>
+                            <li class="nav-item"><a asp-area="" asp-controller="Home" asp-action="Contact">Vacation</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
-                            <li class="nav-item"><a class="primary_btn text-uppercase" asp-area="" asp-controller="Login" asp-action="Index">sign up / sign in</a></li>
+                                <li class="nav-item"><a class="primary_btn text-uppercase" asp-area="" asp-controller="Login" asp-action="Logout">Logout</a></li>
                         </ul>
                     </div>
                 </div>
