--- a/ASP .NET Core Client/eClinic/Views/Shared/_PatientLayout.cshtml
+++ b/ASP .NET Core Client/eClinic/Views/Shared/_PatientLayout.cshtml
@@ -41,7 +41,7 @@
                         <ul class="nav navbar-nav menu_nav justify-content-center">
                             <li class="nav-item"><a asp-area="" asp-controller="Patient" asp-action="Index">Visits</a></li>
                             <li class="nav-item"><a asp-area="" asp-controller="Patient" asp-action="About">Your medicals</a></li>
-                            <li class="nav-item"><a asp-area="" asp-controller="Patient" asp-action="Contact">Calendar</a></li>
+                            <li class="nav-item"><a asp-area="" asp-controller="Patient" asp-action="Visit">Appointment Registration</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <li class="nav-item"><a class="primary_btn text-uppercase" asp-area="" asp-controller="Login" asp-action="Logout">Logout</a></li>
